# FormacionCVAR

./: .gitignore
Arquetipo1/v1/central_node_pkg/: CMakeLists.txt  manifest.yaml  package.xml  wr_central_node_pkg.py
Arquetipo1/v1/central_node_pkg/include/central_node_pkg/: trigger.hpp
Arquetipo1/v1/central_node_pkg/src/: central_node.cpp  trigger.cpp
Arquetipo1/v1/central_node_pkg/templates/: t_CMakeLists.txt  t_central_node.cpp  t_package.xml
Arquetipo1/v1/pub_node_pkg/: package.xml
Arquetipo1/v2/manifest/central_node_pkg/: manifest.yaml
Arquetipo1/v2/scripts/central_node_pkg/: node.py
Arquetipo1/v2/src/central_node_pkg/: CMakeLists.txt  package.xml
Arquetipo1/v2/src/central_node_pkg/include/central_node_pkg/: trigger.hpp
Arquetipo1/v2/src/central_node_pkg/src/: central_node.cpp  trigger.cpp
Arquetipo1/v2/src/launch_package/: CMakeLists.txt  package.xml
Arquetipo1/v2/src/launch_package/launch/: node_remapping_launch.py
Arquetipo1/v2/src/pub_node_pkg/: CMakeLists.txt
Arquetipo1/v2/src/pub_node_pkg/src/: remapping.cpp
Arquetipo1/v2/templates/central_node_pkg/: package.xml.jinja2
Arquetipo1/v2/templates/central_node_pkg/src/: central_node.cpp.jinja2  trigger.cpp
Arquetipo1/v3/manifest/node/: manifest.yaml
Arquetipo1/v3/scripts/node/: node.py
Arquetipo1/v3/src/central_node_pkg/: package.xml
Arquetipo1/v3/src/central_node_pkg/include/central_node_pkg/: inputs.hpp  outputs.hpp  trigger.hpp
Arquetipo1/v3/src/central_node_pkg/src/: central_node.cpp  trigger.cpp
Arquetipo1/v3/src/pub_node_pkg/src/: remapping.cpp
Arquetipo1/v3/templates/node/: CMakeLists.txt.jinja2
Arquetipo1/v3/templates/node/include/central_node_pkg/: inputs.hpp.jinja2  outputs.hpp.jinja2  trigger.hpp.jinja2
Arquetipo1/v3/templates/node/src/: central_node.cpp.jinja2  trigger.cpp.jinja2
Composable/cpp_pubsub/: CMakeLists.txt  package.xml
Composable/cpp_pubsub/src/: publisher_member_function.cpp
Plugins/RegularPolygon/polygon_base/src/: area_node.cpp
Plugins/RegularPolygon/square/include/square/: visibility_control.h
Plugins/RegularPolygon/triangle/: plugins.xml
Plugins/RegularPolygon/triangle/include/triangle/: visibility_control.h
Plugins/RegularPolygon/v1/polygon_base/: CMakeLists.txt  package.xml
Plugins/RegularPolygon/v1/square/: CMakeLists.txt  plugins.xml
Plugins/RegularPolygon/v1/square/src/: square.cpp
Plugins/RegularPolygon/v1/triangle/: CMakeLists.txt
Plugins/RegularPolygon/v1/triangle/src/: triangle.cpp
Plugins/RegularPolygon/v2/manifest/polygon/: manifest.yaml
Plugins/RegularPolygon/v2/scripts/polygon/: node.py
Plugins/RegularPolygon/v2/src/polygon_base/: CMakeLists.txt  package.xml
Plugins/RegularPolygon/v2/src/polygon_base/include/polygon_base/: regular_polygon.hpp
Plugins/RegularPolygon/v2/src/polygon_base/src/: area_node.cpp
Plugins/RegularPolygon/v2/src/square/: package.xml
Plugins/RegularPolygon/v2/src/triangle/: package.xml
Plugins/RegularPolygon/v2/templates/polygon/: CMakeLists.txt.jinja2
Plugins/Statistics/filter/: CMakeLists.txt  package.xml
Plugins/Statistics/filter/include/filter/: filter.hpp
Plugins/Statistics/filter/src/: main.cpp
Plugins/Statistics/maximum/: CMakeLists.txt  package.xml  plugins.xml
Plugins/Statistics/maximum/include/maximum/: maximum.hpp  visibility_control.h
Plugins/Statistics/maximum/src/: maximum.cpp
Plugins/Statistics/minimum/: CMakeLists.txt  package.xml  plugins.xml
Plugins/Statistics/minimum/include/minimum/: minimum.hpp  visibility_control.h
Plugins/Statistics/minimum/src/: minimum.cpp
Plugins/Statistics/movingAverage/: CMakeLists.txt  package.xml  plugins.xml
Plugins/Statistics/movingAverage/include/movingAverage/: movingAverage.hpp  visibility_control.h
Plugins/Statistics/movingAverage/src/: movingAverage.cpp
Tarea1/: entry.txt
Tarea1/EquipoA/: Filtro.hpp  cpuro.c  cpuro.out  deque.cpp  deque.out  mainfiltro.cpp  mediamovil.cpp  mediamovil.out
Tarea1/EquipoB/: sol_cpp2.cpp  sol_cpp2.out  sol_vector.cpp  sol_vector.out
Tarea2/EquipoA/: Filtro.hpp  mainfiltro.cpp  mediamovil.cpp  minimo.cpp
Tarea2/EquipoB/: CMakeLists.txt  Filtro.hpp  mainfiltro.cpp  maximo.cpp  mediamovil.cpp
Tarea3/EquipoA/cpp_pubsub/: CMakeLists.txt  package.xml
Tarea3/EquipoA/cpp_pubsub/src/: output.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
Tarea3/EquipoA/statistics_lib/: CMakeLists.txt  package.xml
Tarea3/EquipoA/statistics_lib/src/: movingAverage.cpp
Tarea3/EquipoB/equipob/: CMakeLists.txt  package.xml
Tarea3/EquipoB/equipob/src/: publisher.cpp  reader.cpp  reader.hpp
Tarea3/cmake/: CMakeLists.txt  main.cpp
Tarea3/cmake/read/: CMakeLists.txt  read.cpp  read.hpp
Tarea3/cmake/statistics/: CMakeLists.txt  maximum.cpp  maximum.hpp  minimum.cpp  minimum.hpp  movingAverage.cpp  movingAverage.hpp  statistics.hpp
Tarea4/EquipoA/cpp_pubsub_testing/: CMakeLists.txt  package.xml
Tarea4/EquipoA/cpp_pubsub_testing/include/: reader.hpp
Tarea4/EquipoA/cpp_pubsub_testing/include/nodes/: output.hpp  publisher.hpp  subscriber_member_function.hpp
Tarea4/EquipoA/cpp_pubsub_testing/include/statistics_lib/: i_filter.hpp  movingAverage.hpp
Tarea4/EquipoA/cpp_pubsub_testing/src/: output.cpp  output_main.cpp  publisher.cpp  publisher_main.cpp  reader.cpp  subscriber_main.cpp  subscriber_member_function.cpp
Tarea4/EquipoA/cpp_pubsub_testing/test/: my_tests.cpp  my_tests2.cpp
Tarea4/EquipoA/cpp_pubsub_testing/test/samples/: samples1.out  samples2.out  samples3.out
Tarea4/EquipoB/publishers/: CMakeLists.txt  main.cpp  publisher_member_function_1.cpp  publisher_member_function_2.cpp
Tarea4/EquipoB/remapping/cpp_pubsub/: CMakeLists.txt  package.xml
Tarea4/EquipoB/remapping/launch_package/: CMakeLists.txt  package.xml
Tarea4/EquipoB/remapping/launch_package/launch/: node_remapping_launch.py
Tarea5/: main.cpp  write_main.py
Tarea5/results/: CMakeLists.txt  main.cpp  package.xml
Tarea5/templates/: CMakeLists.txt  main.cpp  package.xml
Tarea5/write/: write_dependencies.py  write_main.py
Tarea5/yaml/: dependencies.yaml  main.yaml
(+7 files in other folders)
