<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>{{ project_name }}</name>
    <version>1.0.0</version>
    <description>Examples of minimal publisher/subscriber using rclcpp</description>
    <maintainer email="carlos.lopez.llorente@alumnos.upm.es">vboxuser</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>{{ packages[1]["name"] }}</depend>
    <depend>{{ packages[2]["name"] }}</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
